--- a/docs/css/Dark.css
+++ b/docs/css/Dark.css
@@ -89,3 +89,7 @@ form input:hover{
     border-bottom: 4px solid rgba(225, 198, 44, 0.686);
 }
 
+#logout{
+    background-color:white;
+    color: black;
+}
