--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -105,7 +105,7 @@ header{
 /******************************************** Slider */
 
  .slick-slide {
-    height: 380px !important;
+    height: 480px !important;
 } 
 
 .slider img{
@@ -301,4 +301,26 @@ form label{
     font-size: 12px;
     padding: 10px;
     /* border-bottom: 4px solid  rgba(225, 198, 44, 0.686); */
+}
+
+
+#logout{
+    display: block;
+    width: 130px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 30px;
+    font-size: 13px;
+    margin: 30px auto 0 auto;
+    text-decoration: none;
+
+}
+#user-img{
+    margin-top: 40px;
+    width:180px; 
+	height:150px; 
+    background-image: url(../img/user1.svg);
+    background-size: 180px 150px;
+    border: 1px solid white;
+    border-radius:30px;
 }
